--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @recipe.errors.any? %>
+  <% @recipe.errors.full_messages.each do |msg| %>
+    <p><%= msg %></p>
+  <% end %>
+<% end %>
+
 <%= form_for recipe do |f| %>
   <div class="form-group">
     <%= f.label :title, 'Título' %>
@@ -28,6 +34,10 @@
   <div class="form-group">
     <%= f.label :cook_method, 'Como Preparar' %>
     <%= f.text_area :cook_method, class: 'form-control col-md-6' %>
+  </div>
+  <div>
+    <%= f.label :image, 'Foto da Receita' %>
+    <%= f.file_field :image%>
   </div>
   <div class="form-group">
     <%= f.submit 'Enviar', class: 'btn btn-primary' %>
