--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,7 @@
 <h1>
   <%= image_tag 'star.png' if @recipe.featured? %>
   <%= @recipe.title %>
+  <%= image_tag @recipe.image.url %>
 </h1>
 <h3>Detalhes</h3>
 <p><%= @recipe.recipe_type.name %></p>
