Administrador cadastra cozinhas - parte 1

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,8 +1,11 @@
+<div class='nav-link'>
+  <%= link_to 'Cadastrar uma Cozinha', new_cuisine_path %>
+</div>
+
 <section class="jumbotron text-center">
   <h1>CookBook</h1>
   <p class="lead">Bem-vindo ao maior livro de receitas online</p>
 </section>
-
   <h3>Receitas destaque</h3>
   <div id="recipes-featured">
     <% @featured_recipes.each do |recipe| %>
