Usuário se autentica no site

--- a/app/views/cuisines/new.html.erb
+++ b/app/views/cuisines/new.html.erb
@@ -1,3 +1,9 @@
+<% @cuisine.errors.full_messages.each do |m| %>
+  <div class='alert alert-warning'>
+    <%= m %>
+  </div>
+<% end %>
+
 <h1>Cadastrar Cozinha</h1>
 
 <%= form_for @cuisine do |f| %>
