--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,19 @@
       <li class="nav-item">
         <%= link_to 'Enviar uma receita', new_recipe_path, class: 'nav-link' %>
       </li>
+      <li class="nav-item">
+        <%= link_to 'Cadastrar uma Cozinha', new_cuisine_path, class: 'nav-link' %>
+      </li>
+
+      <% if user_signed_in? %>
+        <p>Olá <%= current_user.email %></p>
+        <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+      <% else %>
+      <li class="nav-item">
+        <%= link_to 'Entrar', new_user_session_path, class: 'nav-link' %>
+      </li>
+      <% end %>
+
     </ul>
   </div>
 </nav>
