Usuário remove uma receita - scenario successfully
Co-authored-by: Jônatas Pina <jonatas_pina@hotmail.com>
Co-authored-by: Lucas

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -16,6 +16,7 @@
 <p><%= @recipe.user.email %></p>
 
 <%= link_to 'Editar', edit_recipe_path(@recipe), class: 'btn btn-primary' %>
+<%= link_to 'Remover', recipe_path(@recipe), method: :delete, class: 'btn btn-danger' %>
 <%= link_to 'Marcar como destaque', feature_recipe_path(@recipe),
     class: 'btn btn-success', method: :post %>
 <%= link_to 'Voltar', root_path, class: 'btn btn-secondary' %>
